// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stat component when not provided with a "round" prop should render with a specified label and value 1`] = `
preact-render-spy (1 nodes)
-------
<div class="stat">
  <div class="label">label</div>
  <div>value</div>
</div>

`;

exports[`stat component when provided with a "round" prop should render the specified label and value with round styles 1`] = `
preact-render-spy (1 nodes)
-------
<div class="stat round">
  <div>value</div>
  <div class="label">label</div>
</div>

`;
